# dio-santander-store_api

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
dio_santander_store_api/: main.py  routers.py
dio_santander_store_api/controllers/: product.py
dio_santander_store_api/core/: exceptions.py
dio_santander_store_api/db/: mongo.py
dio_santander_store_api/models/: base.py  product.py
dio_santander_store_api/schemas/: base.py  product.py
dio_santander_store_api/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
