[project]
name = "dio-santander-store-api"
version = "0.0.1"
description = ""
authors = [
    {name = "Gabriel",email = "gabrielmvoga@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "fastapi (>=0.104.1,<0.105.0)",
    "uvicorn (>=0.24.0.post1,<0.25.0)",
    "pydantic (>=2.5.1,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "motor (>=3.3.1,<4.0.0)",
    "pytest (>=7.4.3,<8.0.0)",
    "pytest-asyncio (>=0.21.1,<0.22.0)",
    "httpx (>=0.25.1,<0.26.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
